feat: 향수 API 수정 가격, 용량 정보 제거 카테고리 설명 대신 태그로 대체 thumbnailUrl -> thumbnail